<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.0</version>
	</parent>
	<groupId>fr.romainmoreau.gsmmodem</groupId>
	<artifactId>gsm-modem</artifactId>
	<version>0.2.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>gsm-modem-client-api</module>
		<module>gsm-modem-client-common</module>
		<module>gsm-modem-client-common-uart</module>
		<module>gsm-modem-client-jserialcomm</module>
		<module>gsm-modem-jaxb-api</module>
		<module>gsm-modem-client-web</module>
		<module>gsm-modem-web</module>
	</modules>
	<properties>
		<java.version>20</java.version>
	</properties>
	<repositories>
		<repository>
			<id>spring-milestones</id>
			<url>https://repo.spring.io/milestone</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>spring-milestones</id>
			<url>https://repo.spring.io/milestone</url>
		</pluginRepository>
	</pluginRepositories>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>fr.romainmoreau.gsmmodem</groupId>
				<artifactId>gsm-modem-client-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.romainmoreau.gsmmodem</groupId>
				<artifactId>gsm-modem-client-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.romainmoreau.gsmmodem</groupId>
				<artifactId>gsm-modem-client-web</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.romainmoreau.gsmmodem</groupId>
				<artifactId>gsm-modem-client-common-uart</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.romainmoreau.gsmmodem</groupId>
				<artifactId>gsm-modem-client-jserialcomm</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.romainmoreau.gsmmodem</groupId>
				<artifactId>gsm-modem-jaxb-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.romainmoreau.gsmmodem</groupId>
				<artifactId>gsm-modem-web-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fazecast</groupId>
				<artifactId>jSerialComm</artifactId>
				<version>2.9.3</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.12.0</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>jquery</artifactId>
				<version>3.6.4</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>sockjs-client</artifactId>
				<version>1.5.1</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>stomp-websocket</artifactId>
				<version>2.3.4</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>com.akathist.maven.plugins.launch4j</groupId>
					<artifactId>launch4j-maven-plugin</artifactId>
					<version>2.1.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>